--- a/department-service.properties
+++ b/department-service.properties
@@ -9,3 +9,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 eureka.instance.hostname=localhost
+spring.boot.message= hello i am from github server repository
