--- a/employee-service.properties
+++ b/employee-service.properties
@@ -9,3 +9,4 @@ server.port=8081
 
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 eureka.instance.hostname=localhost
+spring.boot.message= hello from employee server from gitub 
