--- a/employee-service.properties
+++ b/employee-service.properties
@@ -9,4 +9,4 @@ server.port=8081
 
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 eureka.instance.hostname=localhost
-spring.boot.message= hello from employee server from gitub 
+spring.boot.message= hello from employee service  from Github spring refresh bus
